# ctypes_example

./: .gitignore  CMakeLists.txt  README.md
examples/: gsl_test.py  lapack_test.py  write_file.py
python/: setup.py  smacky.py
python/c_utils/: .create_file.py.swp  __init__.py  create_file.py  gsl.py  lapack.py
write_file/: CMakeLists.txt  write_file.c
